--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dubbo.version>2.5.3</dubbo.version>
         <zk.version>3.4.5</zk.version>
         <zkclient.version>0.1</zkclient.version>
-
+        <spring.version>5.0.8.RELEASE</spring.version>
         <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
         <iframe.core-finalName>iframe-core</iframe.core-finalName>
         <iframe.control-finalName>iframe-control</iframe.control-finalName>
@@ -73,11 +73,11 @@
             <!--<artifactId>spring-boot-starter</artifactId>-->
         <!--</dependency>-->
 
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-test</artifactId>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
